# dma-accessible

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: basic.rs
src/: lib.rs
