[package]
name = "dma-accessible"
version = "0.1.0"
edition = "2024"

[dependencies]
grounded = "0.2.0"

[dev-dependencies]
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
defmt = "1.0.1"
defmt-rtt = "1.0.0"

[[example]]
name = "basic"
path = "examples/basic.rs"