[package]
name = "dma-accessible"
version = "0.1.0"
edition = "2024"

[dependencies]
grounded = "0.2.0"

[dev-dependencies]
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32h750ib", "time-driver-tim5", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }

[[example]]
name = "basic"
path = "examples/basic.rs"